// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`payments-list-core displays an error state on failed data fetch 1`] = `
<payments-list-core class="body" exportparts="label" style="display: block;">
  <style></style>
  <div class="gy-3 mb-4 row">
    <div class="col-2">
      <form-control-date label="Start Date" name="created_after"></form-control-date>
    </div>
    <div class="col-2">
      <form-control-date label="End Date" name="created_before"></form-control-date>
    </div>
  </div>
  <div class="table-wrapper">
    <table class="table table-hover">
      <thead class="sticky-top table-head" part="table-head">
        <tr class="table-light text-nowrap" part="table-head-row">
          <th part="table-head-cell" scope="col" title="The date and time each payment was made">
            Made On
          </th>
          <th part="table-head-cell" scope="col" title="The dollar amount of each payment">
            Amount
          </th>
          <th part="table-head-cell" scope="col" title="The payment description, if you provided one">
            Description
          </th>
          <th part="table-head-cell" scope="col" title="The name associated with the payment method">
            Cardholder
          </th>
          <th part="table-head-cell" scope="col" title="The brand and last 4 digits of the payment method">
            Payment Method
          </th>
          <th part="table-head-cell" scope="col" title="The current status of each payment">
            Status
          </th>
          <th part="table-head-cell" scope="col" title="The unique identifier of each payment">
            Payment ID
          </th>
        </tr>
      </thead>
      <tbody class="table-body" part="table-body">
        <tr>
          <td class="error-state" colspan="7" data-test-id="table-error-state" part="error-state" style="text-align: center;">
            An unexpected error occurred: Fetch error
          </td>
        </tr>
      </tbody>
      <tfoot class="sticky-bottom">
        <tr class="align-middle table-light">
          <td colspan="7" part="pagination-bar">
            <pagination-menu>
              <nav aria-label="Table pagination" class="d-flex gap-3 justify-content-end">
                <ul class="m-0 pagination" part="pagination">
                  <li class="disabled page-item" part="page-item">
                    <a class="page-link" href="#" part="page-link page-link-disabled">
                      <span class="me-1" part="page-link-arrow">
                        «
                      </span>
                      <span part="page-button-text">
                        Previous
                      </span>
                    </a>
                  </li>
                  <li class="disabled page-item">
                    <a class="page-link" href="#" part="page-link page-link-disabled">
                      <span part="page-link-text">
                        Next
                      </span>
                      <span class="ms-1" part="page-link-arrow">
                        »
                      </span>
                    </a>
                  </li>
                </ul>
              </nav>
            </pagination-menu>
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</payments-list-core>
`;

exports[`payments-list-core renders properly with fetched data 1`] = `
<payments-list-core class="body" exportparts="label" style="display: block;">
  <style></style>
  <div class="gy-3 mb-4 row">
    <div class="col-2">
      <form-control-date label="Start Date" name="created_after"></form-control-date>
    </div>
    <div class="col-2">
      <form-control-date label="End Date" name="created_before"></form-control-date>
    </div>
  </div>
  <div class="table-wrapper">
    <table class="table table-hover">
      <thead class="sticky-top table-head" part="table-head">
        <tr class="table-light text-nowrap" part="table-head-row">
          <th part="table-head-cell" scope="col" title="The date and time each payment was made">
            Made On
          </th>
          <th part="table-head-cell" scope="col" title="The dollar amount of each payment">
            Amount
          </th>
          <th part="table-head-cell" scope="col" title="The payment description, if you provided one">
            Description
          </th>
          <th part="table-head-cell" scope="col" title="The name associated with the payment method">
            Cardholder
          </th>
          <th part="table-head-cell" scope="col" title="The brand and last 4 digits of the payment method">
            Payment Method
          </th>
          <th part="table-head-cell" scope="col" title="The current status of each payment">
            Status
          </th>
          <th part="table-head-cell" scope="col" title="The unique identifier of each payment">
            Payment ID
          </th>
        </tr>
      </thead>
      <tbody class="table-body" part="table-body">
        <tr data-row-entity-id="py_66NWqoIBi7xnPmqv9By5jD" data-test-id="table-row" part="table-row table-row-odd">
          <td part="table-cell">
            <div class="fw-bold">
              Jan 17, 2024
            </div>
            <div class="fw-bold">
              5:35pm
            </div>
          </td>
          <td part="table-cell">
            $234.56
          </td>
          <td part="table-cell">
            payment
          </td>
          <td part="table-cell">
            test card
          </td>
          <td part="table-cell">
            **** 1111
          </td>
          <td part="table-cell">
            <span class="badge bg-success" title="This payment was successfully captured">
              Successful
            </span>
          </td>
          <td part="table-cell">
            py_66NWqoIBi7xnPmqv9By5jD
          </td>
        </tr>
        <tr data-row-entity-id="py_4VPDyBwelwI9HjufbgwqZK" data-test-id="table-row" part="table-row table-row-even">
          <td part="table-cell">
            <div class="fw-bold">
              Jan 15, 2024
            </div>
            <div class="fw-bold">
              8:52pm
            </div>
          </td>
          <td part="table-cell">
            $234.56
          </td>
          <td part="table-cell">
            payment
          </td>
          <td part="table-cell">
            test card
          </td>
          <td part="table-cell">
            **** 1111
          </td>
          <td part="table-cell">
            <span class="badge bg-success" title="This payment was successfully captured">
              Successful
            </span>
          </td>
          <td part="table-cell">
            py_4VPDyBwelwI9HjufbgwqZK
          </td>
        </tr>
      </tbody>
      <tfoot class="sticky-bottom">
        <tr class="align-middle table-light">
          <td colspan="7" part="pagination-bar">
            <pagination-menu>
              <nav aria-label="Table pagination" class="d-flex gap-3 justify-content-end">
                <ul class="m-0 pagination" part="pagination">
                  <li class="disabled page-item" part="page-item">
                    <a class="page-link" href="#" part="page-link page-link-disabled">
                      <span class="me-1" part="page-link-arrow">
                        «
                      </span>
                      <span part="page-button-text">
                        Previous
                      </span>
                    </a>
                  </li>
                  <li class="disabled page-item">
                    <a class="page-link" href="#" part="page-link page-link-disabled">
                      <span part="page-link-text">
                        Next
                      </span>
                      <span class="ms-1" part="page-link-arrow">
                        »
                      </span>
                    </a>
                  </li>
                </ul>
              </nav>
            </pagination-menu>
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</payments-list-core>
`;
